--- a/views/users.pug
+++ b/views/users.pug
@@ -1,15 +1,16 @@
-div.wrapper.ohnoooo
-    h2
-        hello
-        em USERS #{arr}
-          table(style='width:100%',border='1')
-            tr
-              th name
-              th age
-              th city
-              th state
-            tr
-              td shital  
-              td 30
-              td pune
-              td maharashtra
+doctype html
+html(lang='en')
+  body
+    table(style='width:100%' border='1')
+      tr
+        th NAME
+        th AGE
+        th CITY
+        th STATE
+
+      each a in arr
+        tr
+          td= a.name  
+          td= a.age
+          td= a.city
+          td= a.state
