--- a/views/userForm.pug
+++ b/views/userForm.pug
@@ -1,11 +1,29 @@
+
 mixin userForm()
- form(action="/users" method="POST" class="card")
-  label (for="name") Name
-  input(type="text" name="name")
-  label (for="age") Age
-  input(type="number" name="age")
-  label (for="city") City
-  input(type="text" name="city")
-  label (for="state") State
-  input(type="text" name="state")
-  input(type="submit" value="addUser" class="button")
+  form(action="/users" method="POST" encrypt="multipart/form-data" class="card")
+    br
+    br
+    label(for="name") Name
+    br
+    input(type="text" name="name")
+    br
+    br
+    label(for="age") Age
+    br
+    input(type="number" name="age")
+    br
+    br
+    label(for="city") City
+    br
+    input(type="text" name="city")
+    br
+    br
+    label(for="state") State
+    br
+    input(type="text" name="state")
+    br
+    br
+    input(type="submit" value="addUser" class="button")
+    br
+    br
+    input(type="submit" value="deleteUser" class="button")
