--- a/views/userForm.pug
+++ b/views/userForm.pug
@@ -1,5 +1,5 @@
 mixin userForm()
-  form(action="/users" method="POST" encrypt="multipart/form-data" class="card")
+  form(action="/users" method="POST" class="card")
     br
     br
     label(for="name") Name
